tests/rosetta/out/Kotlin/accumulator-factory.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/accumulator-factory.kt:26:12: error: function invocation 'add(...)' expected
    return add
           ^
/tmp/accumulator-factory.kt:26:12: error: no value passed for parameter 'nv'
    return add
           ^
/tmp/accumulator-factory.kt:26:12: error: type mismatch: inferred type is Any but (Any) -> Unit was expected
    return add
           ^
