tests/rosetta/out/Kotlin/accumulator-factory.kt
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
fun toDouble(v: Any?): Double = when (v) {
    is Double -> v
    is Int -> v.toDouble()
    is String -> v.toDouble()
    else -> 0.0
}
// Code generated from accumulator-factory.mochi

/**
 * Auto-generated from Mochi
 * @param sum Any
 * @return (Any) -> Unit
 */
fun accumulator(sum: Any): (Any) -> Unit {
    var store: MutableList<Any> = mutableListOf(sum)
    /**
     * Auto-generated from Mochi
     * @param nv Any
     * @return Any
     */
    fun add(nv: Any): Any {
        store[0] = toDouble(store[0]) + toDouble(nv)
        return store[0]
    }
    return add
}

/**
 * Auto-generated from Mochi
 */
fun main(): Unit {
    val x = accumulator(1)
    x(5)
    accumulator(3)
    println(x(2.3).toString())
}

